--- a/charts/aks-store-demo/templates/ingress.yaml
+++ b/charts/aks-store-demo/templates/ingress.yaml
@@ -1,29 +1,46 @@
 {{- if .Values.ingress.enabled }}
+# Store-Front Ingress (serves from /)
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: aks-store-ingress
+  name: store-front-ingress
   labels:
-    app.kubernetes.io/name: aks-store-demo
+    app.kubernetes.io/name: store-front
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-  {{- with .Values.ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 spec:
   ingressClassName: {{ .Values.ingress.className }}
   rules:
-  {{- range .Values.ingress.rules }}
   - http:
       paths:
-      {{- range .paths }}
-      - path: {{ .path }}
-        pathType: {{ .pathType }}
+      - path: /
+        pathType: Prefix
         backend:
           service:
-            name: {{ .serviceName }}
+            name: store-front
             port:
-              number: {{ .servicePort }}
-      {{- end }}
-  {{- end }}
+              number: 80
+---
+# Store-Admin Ingress (serves from /admin, rewritten to /)
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: store-admin-ingress
+  labels:
+    app.kubernetes.io/name: store-admin
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
+spec:
+  ingressClassName: {{ .Values.ingress.className }}
+  rules:
+  - http:
+      paths:
+      - path: /admin(/|$)(.*)
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: store-admin
+            port:
+              number: 80
 {{- end }}
