--- a/charts/aks-store-demo/values-dev.yaml
+++ b/charts/aks-store-demo/values-dev.yaml
@@ -30,7 +30,7 @@ storeFront:
   serviceType: ClusterIP
 
 storeAdmin:
-  serviceType: ClusterIP
+  serviceType: LoadBalancer
 
 # Ingress configuration
 ingress:
