--- a/src/order-service/package.json
+++ b/src/order-service/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/identity": "^4.2.1",
+    "@azure/keyvault-secrets": "^4.8.0",
     "@azure/service-bus": "^7.9.4",
     "@fastify/autoload": "^5.0.0",
     "@fastify/cors": "^8.3.0",
